--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "termitavee",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "mongodb": "^2.2.31",
     "socket.io": "^2.0.3"
