--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "mongodb": "^2.2.31",
-    "socket.io": "^2.0.3"
+    "nodemailer": "^4.1.3",
+    "socket.io": "^2.0.3",
+    "webworker-threads": "^0.7.13"
   }
 }
