--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "db": "sudo service mongod start",
+    "dev": "nodemon index.js",
+    "production": "pm2 index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "termitavee",
