--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js",
+    "log": "pm2 log",
     "db": "sudo service mongod start",
     "dev": "nodemon index.js",
     "stop": "pm2 kill",
