--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Serverside work for this mmo",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js -i max",
+    "start": "pm2 start index.js --name chibimmo",
     "log": "pm2 log",
     "db": "sudo service mongod start",
     "dev": "nodemon index.js",
-    "stop": "pm2 kill",
+    "stop": "pm2 delete chibimmo",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "termitavee",
