--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongodb": "^2.2.34",
     "nodemailer": "^4.4.1",
     "socket.io": "^2.0.4",
